--- a/index.html
+++ b/index.html
@@ -1,73 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Fylo landing page with two column layout</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Fylo landing page with two column layout</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+    <script src="https://use.fontawesome.com/4ac2e5dc4b.js"></script>
+  </head>
+  <body>
+    <header class="header">
+      <img src="./images/logo.svg" alt="logo" />
+      <nav class="nav">
+        <ul class="nav__items">
+          <li class="nav__item">
+            <a href="" class="nav__link">Features</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Team</a>
+          </li>
+          <li class="nav__item">
+            <a href="" class="nav__link">Sign In</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="hero__img">
+          <img src="./images/illustration-1.svg" alt="hero-illustration" />
+        </div>
+        <div class="hero__content">
+          <h3 class="hero__title">
+            All your files in one secure location, accessible anywhere.
+          </h3>
+          <p class="hero__para">
+            Fylo stores your most important files in one secure location. Access
+            them wherever you need, share and collaborate with friends, family,
+            and co-workers.
+          </p>
+        </div>
+        <div class="hero__form">
+          <form action="#">
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="hero__email"
+              placeholder="Enter Your Email"
+            />
+            <button type="submit" class="button hero__button">
+              Get Started
+            </button>
+          </form>
+        </div>
+      </section>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+      <section class="middle-section">
+        <div class="middle-section__img">
+          <img src="./images/illustration-2.svg" alt="bottom-illustration" />
+        </div>
+        <div class="middle-section__content">
+          <h3 class="title middle-section__title">
+            Stay productive, wherever you are
+          </h3>
+          <p class="middle-section__para">
+            Never let location be an issue when accessing your files. Fylo has
+            you covered for all of your file storage needs.
+          </p>
+          <p class="middle-section__para">
+            Securely share files and folders with friends, family and colleagues
+            for live collaboration. No email attachments required!
+          </p>
+        </div>
+        <div class="middle-section__link">
+          <a href="#">See how it works </a>
+          <img src="./images/icon-arrow.svg" alt="link-arrow" />
+        </div>
+      </section>
 
-  Features
-  Team
-  Sign In
+      <section class="testimonials">
+        <div class="testimonials-quote">
+          <img src="./images/icon-quotes.svg" alt="'" />
+          <p class="testimonials-quote__para">
+            Fylo works Fylo has improved our team productivity by an order of
+            magnitude. Since making the switch our team has become a well-oiled
+            collaboration machine.
+          </p>
+          <div class="user">
+            <div class="user__photo">
+              <img src="./images/avatar-testimonial.jpg" alt="user" />
+            </div>
+            <div class="user__details">
+              <div class="user__name title">Kyle Burton</div>
+              <div class="user__position">Founder & CEO, Huddle</div>
+            </div>
+          </div>
+        </div>
+      </section>
 
-  All your files in one secure location, accessible anywhere.
+      <section class="early-access">
+        <div class="early-access__content">
+          <h3 class="title early-access__title">Get early access today</h3>
+          <p class="early-access__para">
+            It only takes a minute to sign up and our free starter tier is
+            extremely generous. If you have any questions, our support team
+            would be happy to help you.
+          </p>
+        </div>
+        <div class="early-access__form">
+          <form action="#">
+            <input
+              type="email"
+              name="email"
+              id="email2"
+              class="early-access__email"
+              placeholder="email@example.com"
+            />
+            <button class="button early-access__button">
+              Get started For free
+            </button>
+          </form>
+        </div>
+      </section>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
-
-  Get Started
-
-  Stay productive, wherever you are
-
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-  Phone: +1-543-123-4567
-  example@fylo.com
-
-  About Us
-  Jobs
-  Press
-  Blog
-
-  Contact Us
-  Terms
-  Privacy
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+      <footer class="footer">
+        <div>
+          <div class="footer__logo">
+            <img src="./images/logo.svg" alt="logo" />
+          </div>
+          <div class="footer__contact">
+            <p class="footer__phone">Phone: +1-543-123-4567</p>
+            <p class="footer__email">example@fly.com</p>
+          </div>
+        </div>
+        <div>
+          <ul class="footer__links">
+            <li class="footer__link">About Us</li>
+            <li class="footer__link">Jobs</li>
+            <li class="footer__link">Press</li>
+            <li class="footer__link">Blog</li>
+          </ul>
+        </div>
+        <div>
+          <ul class="footer__links">
+            <li class="footer__link">Contact</li>
+            <li class="footer__link">Terms</li>
+            <li class="footer__link">Privacy</li>
+          </ul>
+        </div>
+        <div class="footer__social">
+          <i class="fa fa-facebook"></i>
+          <i class="fa fa-twitter"></i>
+          <i class="fa fa-instagram"></i>
+        </div>
+      </footer>
+    </main>
+  </body>
 </html>
+
