--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="https://use.fontawesome.com/4ac2e5dc4b.js"></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header container">
       <img src="./images/logo.svg" alt="logo" />
       <nav class="nav">
         <ul class="nav__items">
@@ -36,61 +36,52 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section class="hero">
-        <div class="hero__img">
-          <img src="./images/illustration-1.svg" alt="hero-illustration" />
-        </div>
-        <div class="hero__content">
-          <h3 class="hero__title">
-            All your files in one secure location, accessible anywhere.
-          </h3>
-          <p class="hero__para">
-            Fylo stores your most important files in one secure location. Access
-            them wherever you need, share and collaborate with friends, family,
-            and co-workers.
-          </p>
-        </div>
-        <div class="hero__form">
-          <form action="#">
-            <input
-              type="email"
-              name="email"
-              id="email"
-              class="hero__email"
-              placeholder="Enter Your Email"
-            />
-            <button type="submit" class="button hero__button">
-              Get Started
-            </button>
-          </form>
-        </div>
-      </section>
+    <section class="hero container">
+      <div class="hero__img">
+        <img src="./images/illustration-1.svg" alt="hero-illustration" />
+      </div>
+      <div class="hero__content">
+        <h3 class="hero__title title">
+          All your files in one secure location, accessible anywhere.
+        </h3>
+        <p class="hero__para">
+          Fylo stores your most important files in one secure location. Access
+          them wherever you need, share and collaborate with friends, family,
+          and co-workers.
+        </p>
+        <form action="#" class="hero__form" id="hero__form">
+          <input
+            name="email"
+            id="hero__email"
+            class="hero__email"
+            placeholder="Enter Your Email"
+          />
+          <span class="hero__error" id="hero__error"></span>
+          <button type="submit" class="button hero__button">Get Started</button>
+        </form>
+      </div>
+    </section>
 
-      <section class="middle-section">
-        <div class="middle-section__img">
-          <img src="./images/illustration-2.svg" alt="bottom-illustration" />
-        </div>
-        <div class="middle-section__content">
-          <h3 class="title middle-section__title">
-            Stay productive, wherever you are
-          </h3>
-          <p class="middle-section__para">
-            Never let location be an issue when accessing your files. Fylo has
-            you covered for all of your file storage needs.
-          </p>
-          <p class="middle-section__para">
-            Securely share files and folders with friends, family and colleagues
-            for live collaboration. No email attachments required!
-          </p>
-        </div>
+    <section class="middle-section container">
+      <div class="middle-section__img">
+        <img src="./images/illustration-2.svg" alt="bottom-illustration" />
+      </div>
+      <div class="middle-section__content">
+        <h3 class="title middle-section__title">
+          Stay productive, wherever you are
+        </h3>
+        <p class="middle-section__para">
+          Never let location be an issue when accessing your files. Fylo has you
+          covered for all of your file storage needs.
+        </p>
+        <p class="middle-section__para">
+          Securely share files and folders with friends, family and colleagues
+          for live collaboration. No email attachments required!
+        </p>
         <div class="middle-section__link">
           <a href="#">See how it works </a>
           <img src="./images/icon-arrow.svg" alt="link-arrow" />
         </div>
-      </section>
-
-      <section class="testimonials">
         <div class="testimonials-quote">
           <img src="./images/icon-quotes.svg" alt="'" />
           <p class="testimonials-quote__para">
@@ -108,65 +99,69 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section class="early-access">
-        <div class="early-access__content">
-          <h3 class="title early-access__title">Get early access today</h3>
-          <p class="early-access__para">
-            It only takes a minute to sign up and our free starter tier is
-            extremely generous. If you have any questions, our support team
-            would be happy to help you.
-          </p>
-        </div>
-        <div class="early-access__form">
-          <form action="#">
-            <input
-              type="email"
-              name="email"
-              id="email2"
-              class="early-access__email"
-              placeholder="email@example.com"
-            />
-            <button class="button early-access__button">
-              Get started For free
-            </button>
-          </form>
-        </div>
-      </section>
+    <section class="early-access">
+      <div class="early-access__content">
+        <h3 class="title early-access__title">Get early access today</h3>
+        <p class="early-access__para">
+          It only takes a minute to sign up and our free starter tier is
+          extremely generous. If you have any questions, our support team would
+          be happy to help you.
+        </p>
+      </div>
+      <form action="#" class="early-access__form" id="early-access__form">
+        <input
+          name="email"
+          id="early-access__email"
+          class="early-access__email"
+          placeholder="email@example.com"
+        />
+        <span class="early-access__error" id="early-access__error"></span>
+        <button class="button early-access__button">
+          Get started For free
+        </button>
+      </form>
+    </section>
 
-      <footer class="footer">
-        <div>
-          <div class="footer__logo">
-            <img src="./images/logo.svg" alt="logo" />
-          </div>
-          <div class="footer__contact">
-            <p class="footer__phone">Phone: +1-543-123-4567</p>
-            <p class="footer__email">example@fly.com</p>
-          </div>
+    <footer class="footer">
+      <div>
+        <div class="footer__logo">
+          <object
+            type="image/svg+xml"
+            data="./images/logo.svg"
+            class="footer__icon-logo"
+          >
+            Bike
+          </object>
         </div>
-        <div>
-          <ul class="footer__links">
-            <li class="footer__link">About Us</li>
-            <li class="footer__link">Jobs</li>
-            <li class="footer__link">Press</li>
-            <li class="footer__link">Blog</li>
-          </ul>
+        <div class="footer__contact">
+          <p class="footer__phone">Phone: +1-543-123-4567</p>
+          <p class="footer__email">example@fly.com</p>
         </div>
-        <div>
-          <ul class="footer__links">
-            <li class="footer__link">Contact</li>
-            <li class="footer__link">Terms</li>
-            <li class="footer__link">Privacy</li>
-          </ul>
-        </div>
-        <div class="footer__social">
-          <i class="fa fa-facebook"></i>
-          <i class="fa fa-twitter"></i>
-          <i class="fa fa-instagram"></i>
-        </div>
-      </footer>
-    </main>
+      </div>
+      <div>
+        <ul class="footer__links">
+          <li class="footer__link">About Us</li>
+          <li class="footer__link">Jobs</li>
+          <li class="footer__link">Press</li>
+          <li class="footer__link">Blog</li>
+        </ul>
+      </div>
+      <div>
+        <ul class="footer__links">
+          <li class="footer__link">Contact</li>
+          <li class="footer__link">Terms</li>
+          <li class="footer__link">Privacy</li>
+        </ul>
+      </div>
+      <div class="footer__social">
+        <i class="fa fa-facebook"></i>
+        <i class="fa fa-twitter"></i>
+        <i class="fa fa-instagram"></i>
+      </div>
+    </footer>
+    <script src="./js/index.js"></script>
   </body>
 </html>
-
