--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <input
             name="email"
             id="hero__email"
+            title="hero__email"
             class="hero__email"
             placeholder="Enter Your Email"
           />
@@ -115,6 +116,7 @@
         <input
           name="email"
           id="early-access__email"
+          title="early-access__email"
           class="early-access__email"
           placeholder="email@example.com"
         />
